--- a/funcVerifc.html
+++ b/funcVerifc.html
@@ -43,35 +43,35 @@
                 <tr>
                   <td >Segunda-Feira</td>
                   <td><img src="assets/Arrow 3.png" alt=""></td>
-                  <td> <button  class="redButton" >Café</button> <button  class="yellowButton" >Almoço</button> <button  class="yellowButton">Jantar</button></td>
+                  <td> <button  class="redButton" >Café</button> <button  class="redButton" >Almoço</button> <button  class="redButton">Jantar</button></td>
                 </tr>
                 <tr>
                   <td>Terça-Feira</td>
                   <td><img src="assets/Arrow 3.png" alt=""></td>
-                  <td> <button  class="yellowButton">Café</button> <button class="yellowButton" >Almoço</button> <button  class="yellowButton">Jantar</button></td>
+                  <td> <button  class="redButton">Café</button> <button class="redButton" >Almoço</button> <button  class="redButton">Jantar</button></td>
                 </tr>
                 <tr>
                     <td>Quarta-Feira</td>
                     <td><img src="assets/Arrow 3.png" alt=""></td>
-                    <td> <button class="redButton" >Café</button> <button class="yellowButton" >Almoço</button> <button class="redButton" >Jantar</button></td>
+                    <td> <button class="redButton" >Café</button> <button class="redButton" >Almoço</button> <button class="redButton" >Jantar</button></td>
 
                   </tr>
                   <tr>
                     <td>Quinta-Feira</td>
                     <td><img src="assets/Arrow 3.png" alt=""></td>
-                    <td> <button class="redButton" >Café</button> <button class="redButton" >Almoço</button> <button class="yellowButton" >Jantar</button></td>
+                    <td> <button class="redButton" >Café</button> <button class="redButton" >Almoço</button> <button class="redButton" >Jantar</button></td>
                   </tr>
 
                   <tr>
                     <td>Sexta-Feira</td>
                     <td><img src="assets/Arrow 3.png" alt=""></td>
-                    <td> <button class="yellowButton" >Café</button> <button class="redButton" >Almoço</button> <button class="redButton" >Jantar</button></td>
+                    <td> <button class="redButton" >Café</button> <button class="redButton" >Almoço</button> <button class="redButton" >Jantar</button></td>
                   </tr>
                   <tr>
 
                     <td>Sábado</td>
                     <td><img src="assets/Arrow 3.png" alt=""></td>
-                    <td> <button class="redButton" >Café</button> <button class="yellowButton" >Almoço</button> <button class="redButton" >Jantar</button></td>
+                    <td> <button class="redButton" >Café</button> <button class="redButton" >Almoço</button> <button class="redButton" >Jantar</button></td>
                   </tr>
               </table>
              
