--- a/verificar.html
+++ b/verificar.html
@@ -17,7 +17,7 @@
       <div class="topInfo">
         <button onclick="window.history.back()" style="border: 0px; background-color: transparent; cursor: pointer;">
           <img src="assets/voltar.png" alt=""></button>
-        <img src="assets/FORTES_LOGOMARCA_moldura-e1660776738611 1.png" alt="">
+        <img  id="logo" src="assets/FORTES_LOGOMARCA_moldura-e1660776738611 1.png" alt="">
       </div>
 
       <div class="idInput">
