--- a/result.html
+++ b/result.html
@@ -17,7 +17,7 @@
                 <div class="topInfo">
                     <button onclick="window.history.back()" style="border: 0px; background-color: transparent; cursor: pointer;"> <img src="assets/voltar.png" alt="" ></button>
                     <img src="assets/FORTES_LOGOMARCA_moldura-e1660776738611 1.png" alt="">
-                    <h1 style="color: #003785; font-size: 20px;  height: 40px; width: 100%; border: 1px solid #003785; border-radius: 25px; display: flex; align-items: center; justify-content: center;">Solicitações ID: 71</h1>
+                    <h1 style="color: #003785; font-size: 20px;  height: 40px; width: 100%; border: 1px solid #003785; border-radius: 25px; display: flex; align-items: center; justify-content: center;">Solicitações do ID: <div id="idText"></div></h1>
                 </div> 
                 <div class="tabela">
                 <table style="border:0px" >
