--- a/verificar.html
+++ b/verificar.html
@@ -13,7 +13,9 @@
 <div class="top-content">
 
   <button onclick="window.history.back()" style="border: 0px; background-color: transparent; cursor: pointer;"> <img src="assets/voltar.png" alt="" ></button>
+  <div class="imagem">
   <img src="assets/FORTES_LOGOMARCA_moldura-e1660776738611 1.png" alt="">
+</div>
 
 </div>
 
@@ -50,8 +52,6 @@
 </script>
 
   </div>
-
-
 
 </body>
 
